style.css
html,
body {
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  overflow: auto;
  font-family: 'JetBrains Mono';
  font-size: 18px;
  background-color: rgb(24, 24, 24);
  color: white;
  text-align: center;
}


h1 {
  font-size: 5vw;
  font-weight: normal;
  color: turquoise;
  margin: 0 auto;
}

h2 {
  font-size: 1.5vw;
  font-weight: bold;
  color: lightgray;
}

section p {
  margin: 0;
  padding: 10px;
}


.topnav {
  /* overflow: hidden; */
  display: flex;
  justify-content: right;
  width: 100%;
  height: 7vh;
  position: fixed;
  z-index: 1;
}

.nav-item {
  text-decoration: none;

  margin: 1% 1%;
  padding: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  border-radius: 15px;
  background: rgb(37, 147, 183);
}

.topnav a:hover {
  color: turquoise;
  border-radius: 15px;
  /* background: white; */
}

.nav-img {

  width: 40px;
  height: 40px;
  display: flex;
  justify-content: left;
  margin-left: auto;
  position: fixed;
}

.icon {
  cursor: pointer;
  /* padding: 5px 5px; */
  margin: 20px 20px;
  z-index: 2;
}

.icon:hover {
  color: turquoise;
}

section {
  text-align: left;
  padding: 5rem;
  min-height: 100vh;
  flex: 1;
  box-sizing: border-box;
}

#about {
  /* background-image: url('./img/abstract-blocks.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%; */
}

#projects {
  color: white;
}

#contact {
  color: white;

  min-height: 0vh;
}

footer {
  color: white;
  margin: auto 0;
  font-size: 18px;
  text-align: center;
  border: none;
  color: #495660;
}

#projects .img-gallery {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

#projects .img-gallery>* {

  margin: 1em 1em;
  width: 25vw;
  height: auto;
}

#projects .img-gallery>*:hover {
  zoom: 1.01;
  -moz-transform: scale(1.01);
  opacity: 0.5;
}

div ul.contact-links {
  list-style: none;
  /* overflow: hidden; */
  display: flex;

  justify-content: center;
}

div ul.contact-links li {
  float: left;
}

div.intro-summary {
  color: lightgray;
  line-height: 2;
  margin: 0 auto;
  text-align: left;
  display: inline-block;
}

.fa-github {
  color: white;
}


.fa-linkedin {
  color: #0077b5;
}

.fa-google {
 color: #ea4335;
}

.fa-dev {
 color: black;
}

